52. If replacing playqueue with a stream, then start playing when added.
53. Fix restoring of alternate size. e.g. fix restore of collapsed size if
    started expanded - and vice versa.
54. Recreate menubar for KDE4 build when run under unity. (Qt builds already
    had this)
55. Hack-around size of QComboBox in page classes so that height is same as
    buttons. (QGtkStyle only)

0.9.2
-----
 1. (Qt-Only) Dont show clear button for read-only line-edits.
 2. Fix 'Locate In Library' when library is not set to tree mode.
 3. Use grid layout for transcoder slider, removes Qt layout warning.
 4. Simplified Chinese translation - thanks to 薛景
 5. Fix restoring of splitter sizes when we start minimized to system tray.
 6. Fix decoding of Cantata HTTP stream URLs.
 7. Work-around issue of non display of main window when using transparent
    QtCurve theme.
 8. Fix playing of some non-MP3 files external to MPD database via Cantata's
    simple HTTP server.
 9. Fix playing of files containing square brackets, etc, that are external
    to MPD database via Cantata's simple HTTP server.
10. Fix detection of some filetypes.
11. Prevent multiple KDE Cantata windows appearing if app is attempted to be
    started repeatedly in quick succession.
12. For streams, if we have a 'name' but no artist or album title, then just
    display the name (this is usually the Radio Station)
13. For a song to be 'empty', artist, album, title, and name need to be empty.
    This fixes detection of updates to the name field when playing streams.
14. Fix potential memory leak when stopping threads.
15. Only enable play queue save-as and clear buttons if there are items in the
    play queue!
16. Fix detection of streams in play queue when current song is updated.

0.9.1
-----
1. Fix saving of 'Store covers in MPD dir' setting.
2. Show/hide main window when KDE tray item clicked.
3. Add 'Show Window' to tray item menu.
4. Dont allow to set focus onto clear button in line-edits.